# simurba

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
config/: settings.py  urls.py
pyside/: main.py
traffic/: admin.py  markov.py  monte_carlo.py  optimizer.py  pathfinding.py  queue_model.py  urls.py  views.py
traffic/static/traffic/js/: simulation.js
traffic/templates/traffic/: base.html
